tests/programs/invalid/InvalidAbstractStaticMethod.java
public abstract class InvalidAbstractStaticMethod {
    public abstract static void abstractStaticMethod();
}
